move tf deployment to subfolder / some refactoring

--- a/coder/tpl/user_data.yaml
+++ b/coder/tpl/user_data.yaml
@@ -19,7 +19,7 @@ write_files:
         coder:
           image: ghcr.io/coder/coder:${coder_version}
           environment:
-            CODER_PG_CONNECTION_URL: "postgresql://coder:${pg_password}@db/coder?sslmode=disable"
+            CODER_PG_CONNECTION_URL: "postgresql://coder:${pg_pass}@db/coder?sslmode=disable"
             CODER_ADDRESS: "0.0.0.0:7080"
             CODER_ACCESS_URL: "https://${coder_domain}"
             CODER_WILDCARD_ACCESS_URL: "*.${coder_domain}"
@@ -37,7 +37,7 @@ write_files:
           image: "postgres:${pg_version}"
           environment:
             POSTGRES_USER: coder
-            POSTGRES_PASSWORD: ${pg_password}
+            POSTGRES_PASSWORD: ${pg_pass}
             POSTGRES_DB: coder
           volumes:
             - coder_data:/var/lib/postgresql/data
@@ -85,7 +85,7 @@ write_files:
       #!/usr/bin/env bash
       curl -X POST -H 'Content-Type: application/json' -d '{
         "email": "${acme_email}",
-        "password": "${coder_initial_password}",
+        "password": "${coder_init_pass}",
         "username": "admin",
         "trial": false
       }' http://localhost:7080/api/v2/users/first -w '%%{http_code}' --silent --output /dev/null
